tests/correctness/resources/miniboxing/tests/compile/gh-bug-185+2-no-plugin.scala
package miniboxing.tests.compile.bug185

object Test {
  def main(args: Array[String]): Unit = {
    // the two problems that can occur:
    val c = new C[Int]
    object O extends C[String]
  }
}

